Fixing build script

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ extension/contentScript.js
 node_modules/
 npm-debug.log
 yarn-error.log
+package.json
 package-lock.json
 
 # Generated extension files
@@ -26,3 +27,5 @@ package-lock.json
 
 # Duplicate repository folder
 waspline-reader/
+package.json
+package.json
