--- a/package.json
+++ b/package.json
@@ -22,5 +22,293 @@
   "homepage": "https://github.com/tynen/waspline-reader#readme",
   "devDependencies": {
     "web-ext": "^8.6.0"
+  },
+  "dependencies": {
+    "abort-controller": "^3.0.0",
+    "acorn": "^8.14.1",
+    "acorn-jsx": "^5.3.2",
+    "addons-linter": "^7.11.0",
+    "addons-moz-compare": "^1.3.0",
+    "addons-scanner-utils": "^9.12.0",
+    "adm-zip": "^0.5.16",
+    "agent-base": "^7.1.3",
+    "ajv": "^8.17.1",
+    "ansi-align": "^3.0.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "array-differ": "^4.0.0",
+    "array-union": "^3.0.1",
+    "async": "^3.2.6",
+    "atomic-sleep": "^1.0.0",
+    "atomically": "^2.0.3",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "big-integer": "^1.6.52",
+    "bluebird": "^3.7.2",
+    "boolbase": "^1.0.0",
+    "boxen": "^8.0.1",
+    "bplist-parser": "^0.2.0",
+    "brace-expansion": "^1.1.11",
+    "buffer": "^6.0.3",
+    "buffer-crc32": "^0.2.13",
+    "buffer-from": "^1.1.2",
+    "bundle-name": "^3.0.0",
+    "callsites": "^3.1.0",
+    "camelcase": "^8.0.0",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cheerio-select": "^2.1.0",
+    "chrome-launcher": "^1.1.2",
+    "cli-boxes": "^3.0.0",
+    "cliui": "^8.0.1",
+    "clone": "^1.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "columnify": "^1.6.0",
+    "commander": "^9.5.0",
+    "common-tags": "^1.8.2",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "config-chain": "^1.1.13",
+    "configstore": "^7.0.0",
+    "core-util-is": "^1.0.3",
+    "cross-spawn": "^7.0.6",
+    "css-select": "^5.1.0",
+    "css-what": "^6.1.0",
+    "debounce": "^1.2.1",
+    "debug": "^4.3.7",
+    "decamelize": "^6.0.0",
+    "deep-extend": "^0.6.0",
+    "deep-is": "^0.1.4",
+    "deepmerge": "^4.3.1",
+    "default-browser": "^4.0.0",
+    "default-browser-id": "^3.0.0",
+    "defaults": "^1.0.4",
+    "define-lazy-prop": "^3.0.0",
+    "doctrine": "^3.0.0",
+    "dom-serializer": "^2.0.0",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.2.2",
+    "dot-prop": "^9.0.0",
+    "emoji-regex": "^10.4.0",
+    "entities": "^4.5.0",
+    "error-ex": "^1.3.2",
+    "es6-error": "^4.1.1",
+    "escalade": "^3.2.0",
+    "escape-goat": "^4.0.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-no-unsanitized": "^4.1.2",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^4.2.0",
+    "espree": "^10.3.0",
+    "esprima": "^4.0.1",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "event-target-shim": "^5.0.1",
+    "events": "^3.3.0",
+    "execa": "^7.2.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-patch": "^3.1.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fast-redact": "^3.5.0",
+    "fast-uri": "^3.0.6",
+    "fastq": "^1.19.1",
+    "fd-slicer": "^1.1.0",
+    "file-entry-cache": "^6.0.1",
+    "find-up": "^5.0.0",
+    "firefox-profile": "^4.7.0",
+    "first-chunk-stream": "^3.0.0",
+    "flat-cache": "^3.2.0",
+    "flatted": "^3.3.3",
+    "fs-extra": "^11.3.0",
+    "fs.realpath": "^1.0.0",
+    "fx-runner": "^1.4.0",
+    "get-caller-file": "^2.0.5",
+    "get-east-asian-width": "^1.3.0",
+    "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "glob-to-regexp": "^0.4.1",
+    "global-directory": "^4.0.1",
+    "globals": "^13.24.0",
+    "graceful-fs": "^4.2.11",
+    "graceful-readlink": "^1.0.1",
+    "graphemer": "^1.4.0",
+    "growly": "^1.3.0",
+    "has-flag": "^4.0.0",
+    "htmlparser2": "^8.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "human-signals": "^4.3.1",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.3.2",
+    "image-size": "^2.0.2",
+    "immediate": "^3.0.6",
+    "import-fresh": "^3.3.1",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^4.1.3",
+    "is-absolute": "^0.1.7",
+    "is-arrayish": "^0.2.1",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-in-ci": "^1.0.0",
+    "is-inside-container": "^1.0.0",
+    "is-installed-globally": "^1.0.0",
+    "is-npm": "^6.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-relative": "^0.1.3",
+    "is-stream": "^3.0.0",
+    "is-utf8": "^0.2.1",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "jose": "^5.9.6",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-merge-patch": "^1.0.2",
+    "json-parse-even-better-errors": "^3.0.2",
+    "json-schema-traverse": "^1.0.0",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "jsonfile": "^6.1.0",
+    "jszip": "^3.10.1",
+    "keyv": "^4.5.4",
+    "ky": "^1.8.1",
+    "latest-version": "^9.0.0",
+    "levn": "^0.4.1",
+    "lie": "^3.3.0",
+    "lighthouse-logger": "^2.0.1",
+    "lines-and-columns": "^2.0.4",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "make-error": "^1.3.6",
+    "marky": "^1.3.0",
+    "merge-stream": "^2.0.0",
+    "mimic-fn": "^4.0.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.3",
+    "multimatch": "^6.0.0",
+    "natural-compare": "^1.4.0",
+    "node-forge": "^1.3.1",
+    "node-notifier": "^10.0.1",
+    "npm-run-path": "^5.3.0",
+    "nth-check": "^2.1.1",
+    "on-exit-leak-free": "^2.1.2",
+    "once": "^1.4.0",
+    "onetime": "^6.0.0",
+    "open": "^9.1.0",
+    "optionator": "^0.9.4",
+    "os-shim": "^0.1.3",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "package-json": "^10.0.1",
+    "pako": "^1.0.11",
+    "parent-module": "^1.0.1",
+    "parse-json": "^7.1.1",
+    "parse5": "^7.3.0",
+    "parse5-htmlparser2-tree-adapter": "^7.1.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "pend": "^1.2.0",
+    "picocolors": "^1.1.1",
+    "pino": "^9.6.0",
+    "pino-abstract-transport": "^2.0.0",
+    "pino-std-serializers": "^7.0.0",
+    "prelude-ls": "^1.2.1",
+    "process": "^0.11.10",
+    "process-nextick-args": "^2.0.1",
+    "process-warning": "^4.0.1",
+    "promise-toolbox": "^0.21.0",
+    "proto-list": "^1.2.4",
+    "punycode": "^2.3.1",
+    "pupa": "^3.1.0",
+    "queue-microtask": "^1.2.3",
+    "quick-format-unescaped": "^4.0.4",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.8",
+    "real-require": "^0.2.0",
+    "regenerator-runtime": "^0.14.1",
+    "registry-auth-token": "^5.1.0",
+    "registry-url": "^6.0.1",
+    "require-directory": "^2.1.1",
+    "require-from-string": "^2.0.2",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.1.0",
+    "rimraf": "^3.0.2",
+    "run-applescript": "^5.0.0",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.1.2",
+    "safe-stable-stringify": "^2.5.0",
+    "sax": "^1.4.1",
+    "semver": "^7.7.1",
+    "setimmediate": "^1.0.5",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "shell-quote": "^1.7.3",
+    "shellwords": "^0.1.1",
+    "signal-exit": "^3.0.7",
+    "sonic-boom": "^4.2.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.21",
+    "spawn-sync": "^1.0.15",
+    "split": "^1.0.1",
+    "split2": "^4.2.0",
+    "string_decoder": "^1.1.1",
+    "string-width": "^7.2.0",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^5.0.0",
+    "strip-bom-buf": "^2.0.0",
+    "strip-bom-stream": "^4.0.0",
+    "strip-final-newline": "^3.0.0",
+    "strip-json-comments": "^5.0.1",
+    "stubborn-fs": "^1.2.5",
+    "supports-color": "^7.2.0",
+    "text-table": "^0.2.0",
+    "thread-stream": "^3.1.0",
+    "through": "^2.3.8",
+    "titleize": "^3.0.0",
+    "tmp": "^0.2.3",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typedarray": "^0.0.6",
+    "undici-types": "^6.21.0",
+    "universalify": "^2.0.1",
+    "untildify": "^4.0.0",
+    "upath": "^2.0.1",
+    "update-notifier": "^7.3.1",
+    "uri-js": "^4.4.1",
+    "util-deprecate": "^1.0.2",
+    "uuid": "^8.3.2",
+    "watchpack": "^2.4.2",
+    "wcwidth": "^1.0.1",
+    "when": "^3.7.7",
+    "when-exit": "^2.1.4",
+    "which": "^2.0.2",
+    "widest-line": "^5.0.0",
+    "winreg": "^0.0.12",
+    "word-wrap": "^1.2.5",
+    "wrap-ansi": "^9.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.18.1",
+    "xdg-basedir": "^5.1.0",
+    "xml2js": "^0.6.2",
+    "xmlbuilder": "^11.0.1",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yauzl": "^2.10.0",
+    "yocto-queue": "^0.1.0",
+    "zip-dir": "^2.0.0"
   }
 }
